[gd_scene load_steps=8 format=3 uid="uid://cj7etm5ago6yb"]

[ext_resource type="Script" path="res://scripts/PauseMenu.gd" id="1_q8lth"]
[ext_resource type="AudioBusLayout" uid="uid://sxu57wl4a7hi" path="res://recources/audio_bus_layout.tres" id="2_2tor1"]
[ext_resource type="Script" path="res://scripts/Audio Settings.gd" id="2_3rpq7"]
[ext_resource type="Theme" uid="uid://dymkmd6g8tvih" path="res://recources/UI.tres" id="2_23ni0"]
[ext_resource type="Shader" path="res://shaders/ScrollMat.gdshader" id="2_lu374"]
[ext_resource type="Texture2D" uid="uid://yc6qvrqf7yxj" path="res://Itch Page/Pattern.png" id="2_v102g"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lji1c"]
resource_local_to_scene = true
shader = ExtResource("2_lu374")
shader_parameter/scrollDireciton = Vector2(-0.5, -0.5)
shader_parameter/scale = 2.0
shader_parameter/opacity = 0.8

[node name="Pause Menu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_q8lth")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="Control"]
material = SubResource("ShaderMaterial_lji1c")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_v102g")
stretch_mode = 1

[node name="Resume" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -36.0
offset_top = -15.5
offset_right = 36.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_23ni0")
text = "RESUME"

[node name="Quit" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -36.0
offset_top = 24.0
offset_right = 36.0
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_23ni0")
text = "QUIT"

[node name="Audio Settings" type="Node2D" parent="Control"]
position = Vector2(828, 130)
script = ExtResource("2_3rpq7")
audio_bus = ExtResource("2_2tor1")

[node name="Label" type="Label" parent="Control/Audio Settings"]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 22.0
offset_top = 19.0
offset_right = 167.0
offset_bottom = 42.0
grow_horizontal = 0
grow_vertical = 2
text = "VOLUME SETTINGS"

[node name="Master Vol" type="Label" parent="Control/Audio Settings"]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 22.0
offset_top = 54.0
offset_right = 167.0
offset_bottom = 77.0
grow_horizontal = 0
grow_vertical = 2
text = "Master "

[node name="master Slider" type="HSlider" parent="Control/Audio Settings"]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 5.0
offset_top = 86.0
offset_right = 205.0
offset_bottom = 102.0
grow_horizontal = 0
grow_vertical = 2
min_value = -30.0
max_value = -4.0
value = -4.0

[node name="SFX Vol" type="Label" parent="Control/Audio Settings"]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 22.0
offset_top = 124.0
offset_right = 167.0
offset_bottom = 147.0
grow_horizontal = 0
grow_vertical = 2
text = "SFX"

[node name="sfx slider" type="HSlider" parent="Control/Audio Settings"]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 5.0
offset_top = 156.0
offset_right = 205.0
offset_bottom = 172.0
grow_horizontal = 0
grow_vertical = 2
min_value = -30.0
max_value = -4.0
value = -4.0

[node name="Music Vol" type="Label" parent="Control/Audio Settings"]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 22.0
offset_top = 195.0
offset_right = 167.0
offset_bottom = 218.0
grow_horizontal = 0
grow_vertical = 2
text = "Music"

[node name="Sens" type="Label" parent="Control/Audio Settings"]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 22.0
offset_top = 265.0
offset_right = 167.0
offset_bottom = 288.0
grow_horizontal = 0
grow_vertical = 2
text = "Sensitivity"

[node name="music slider" type="HSlider" parent="Control/Audio Settings"]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 5.0
offset_top = 227.0
offset_right = 205.0
offset_bottom = 243.0
grow_horizontal = 0
grow_vertical = 2
min_value = -30.0
max_value = -4.0
value = -4.0

[node name="LineEdit" type="LineEdit" parent="Control/Audio Settings"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 26.0
offset_top = 295.0
offset_right = 93.0625
offset_bottom = 326.0
grow_horizontal = 0
grow_vertical = 0
text = "0.2"
placeholder_text = "0.2"
alignment = 1
max_length = 4
virtual_keyboard_type = 3

[connection signal="pressed" from="Control/Resume" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Control/Quit" to="." method="_on_quit_pressed"]
[connection signal="value_changed" from="Control/Audio Settings/master Slider" to="Control/Audio Settings" method="_on_master_slider_value_changed"]
[connection signal="value_changed" from="Control/Audio Settings/sfx slider" to="Control/Audio Settings" method="_on_sfx_slider_value_changed"]
[connection signal="value_changed" from="Control/Audio Settings/music slider" to="Control/Audio Settings" method="_on_music_slider_value_changed"]
[connection signal="text_submitted" from="Control/Audio Settings/LineEdit" to="." method="_on_line_edit_text_submitted"]
